# qsensors

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  THIRD_PARTY.md
.github/workflows/: appimage.yml
gentoo/: README.md
gentoo/sys-apps/qsensors/: qsensors-0.80.1.ebuild  qsensors-0.80.2.ebuild  qsensors-0.80.3.ebuild
gentoo/sys-apps/qsensors/files/: qsensors.desktop
i18n/: qsensors_de.ts  qsensors_en.ts  qsensors_es.ts  qsensors_fr.ts
resources/: resources.qrc
src/: main.cpp
src/config/: app_config_store.cpp  app_config_store.h  runtime_config.cpp  runtime_config.h  settings_schema.cpp  settings_schema.h
src/sensors/: sensors_backend.cpp  sensors_backend.h  sensors_policy.h
src/ui/: main_window.cpp  main_window.h  main_window_state_store.cpp  main_window_state_store.h
src/ui/panels/: sensors_panel.cpp  sensors_panel.h  settings_panel.cpp  settings_panel.h
src/ui/theme/: app_theme.cpp  app_theme.h
src/ui/widgets/: lcd_display_widget.cpp  lcd_display_widget.h  lcd_glyph_atlas.cpp  lcd_glyph_atlas.h  sensor_value_widget.cpp  sensor_value_widget.h
tests/: test_glyph_model.cpp  test_lcd_logic.cpp  test_sensor_contract.cpp  test_sensors_policy.cpp  test_settings_persistence.cpp
